# scraptor

./: Cargo.toml  README.md  build.rs
bench/: dxgi.rs
examples/: bench_dxgi.rs
src/: errors.rs  frame.rs  lib.rs
src/driver/: dxgi.rs  mod.rs
src/driver/dx11/: frame.rs
src/driver/dxgi/: capture.rs  display.rs  errors.rs  frame.rs  mod.rs
